<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">
	
	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_favorites"
			android:icon="@drawable/ic_favorite"
			android:title="@string/menu_favorites" />
		<item
			android:id="@+id/nav_devices"
			android:icon="@drawable/ic_devices"
			android:title="@string/menu_devices" />
		<item
			android:id="@+id/nav_tasks"
			android:icon="@drawable/ic_task"
			android:title="@string/menu_tasks" />
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home"
			android:title="@string/menu_home" />
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_settings"
			android:title="@string/menu_settings" />
	</group>
</menu>