<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@id/nav_favorites">
	
	<fragment
		android:id="@+id/nav_favorites"
		android:name="ca.humbermail.n01300070.automahome.ui.favorites.FavoritesFragment"
		android:label="@string/menu_favorites"
		tools:layout="@layout/fragment_favorites" />
	
	<fragment
		android:id="@+id/nav_devices"
		android:name="ca.humbermail.n01300070.automahome.ui.devices.DevicesFragment"
		android:label="@string/menu_devices"
		tools:layout="@layout/fragment_devices" />
	
	<fragment
		android:id="@+id/nav_tasks"
		android:name="ca.humbermail.n01300070.automahome.ui.tasks.TasksFragment"
		android:label="@string/menu_tasks"
		tools:layout="@layout/fragment_tasks" />
	
	<fragment
		android:id="@+id/nav_home"
		android:name="ca.humbermail.n01300070.automahome.ui.manageHome.ManageHomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_manage_home" />
	
	<fragment
		android:id="@+id/nav_settings"
		android:name="ca.humbermail.n01300070.automahome.ui.settings.SettingsFragment"
		android:label="@string/menu_settings"
		tools:layout="@layout/fragment_settings" />
</navigation>