<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.tasks.condition.EditConditionScheduleFragment">
	
	<TextView
		android:id="@+id/textView_editConditionSchedule_header"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/schedule"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textInputLayout_editConditionSchedule_time"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:hint="@string/activate_at"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView_editConditionSchedule_header">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/textInputEditText_editConditionSchedule_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none" />
	</com.google.android.material.textfield.TextInputLayout>
	
	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/buttonToggleGroup_weekDays"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:checkedButton="@id/toggleButton_equal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout_editConditionSchedule_time"
		app:selectionRequired="false"
		app:singleSelection="false">
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_sunday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/sunday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_monday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/monday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_tuesday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/tuesday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_wednesday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/wednesday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_thursday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/thursday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_friday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/friday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/toggleButton_saturday"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableBottom="@drawable/btn_radio_material_anim"
			android:text="@string/saturday"
			android:textAllCaps="false"
			app:backgroundTint="@android:color/transparent"
			app:iconPadding="0dp"
			app:rippleColor="@null" />
	
	</com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>